--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -43,35 +43,6 @@
       <!-- {% include "question__problems_with_article.html" %} -->
 
       <div id="header_row" class="toolbar">
-        <!-- <a
-            id="back_button"
-            {#
-            href="{{ url_for('reader_blueprint.articles') }}"
-            #}
-            class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon "
-          >
-            <i class="material-icons">arrow_back</i>
-          </a>
-
-          <div class="mdl-tooltip" data-mdl-for="back_button">
-            Back To Article List
-          </div>
-
-          <a
-            id="read_later_link"
-            href="{{ url_for('reader_blueprint.articles') }}"
-          >
-            <i id="read_later" class="material-icons">watch_later</i>
-          </a>
-
-          <div class="mdl-tooltip" data-mdl-for="read_later_link">
-            Read Later...
-          </div>
-
-          <div class="mdl-layout-spacer"></div>
-
-        -->
-
         <div class="main-tools">
           <div>
             <button class="tool" id="toggle_translate">
@@ -91,22 +62,8 @@
               <span class="tooltiptext">undo translation</span>
             </button>
           </div>
-
-          <!-- 
-          <button class="tool" id="toggle_copy"
-            class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon mdl-button--disabled ">
-            <i class="material-icons">content_copy</i>
-          </button>
-    
-          <button class="tool" id="toggle_star" class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon ">
-            <i id="star_border" class="material-icons star">star_border</i>
-            <i id="star_fill" class="material-icons star off">star</i>
-          </button>
-          -->
-
         </div>
       </div>
-
     </header>
 
     <span id="articleID" style="display: none">{{ article_id }}</span>
@@ -119,67 +76,34 @@
             <p class="title translatable">
               <span id="articleTitle"></span>
             </p>
-
-
-              <hr class="seperator" />
-              <div class="articleDetails">
-                <button id="bookmark_button" class="bookmark_button">
-                  <img
-                    class="bookmark_icon_done"
-                    src="{{ url_for('reader_blueprint.static',filename='images/SVGs/bookmark-done.svg') }}"
-                    alt="bookmark this article"
-                  />
-                  <img
-                    class="bookmark_icon_undone"
-                    src="{{ url_for('reader_blueprint.static',filename='images/SVGs/bookmark-undone.svg') }}"
-                    alt="bookmark this article"
-                  />
-                </button>
-                <p id="articleInfo">
-                  <span id="articleURL"></span>
-                  <a href="" id="source">source<br /></a>
-                  <span id="authors"></span>
-                </p>
-              </div>
-              <div id="articleContent" class="translatable"></div>
-              <br />
+            <hr class="seperator" />
+            <div class="articleDetails">
+              <button id="bookmark_button" class="bookmark_button">
+                <img class="bookmark_icon_done"
+                  src="{{ url_for('reader_blueprint.static',filename='images/SVGs/bookmark-done.svg') }}"
+                  alt="bookmark this article" />
+                <img class="bookmark_icon_undone"
+                  src="{{ url_for('reader_blueprint.static',filename='images/SVGs/bookmark-undone.svg') }}"
+                  alt="bookmark this article" />
+              </button>
+              <p id="articleInfo">
+                <span id="articleURL"></span>
+                <a href="" id="source">source<br /></a>
+                <span id="authors"></span>
+              </p>
             </div>
-
+            <div id="articleContent" class="translatable"></div>
+            <br />
           </div>
-        </div>
-        <div id="like_button">
-          <button id="toggle_like" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
-            <i class="material-icons">thumb_up</i>
-          </button>
         </div>
       </div>
 
-      <div id="bottom_feedback_div" style="visibility:hidden">
-        <div class="questionnaire-content">
-          {% include 'question__article_difficulty.html' %}
-<div class="finalChoices">
-  <button id="enjoyedButton" class="finalChoicesBottons" type="button">Enjoyed reading?</button>
-  <button id="reviewButton" class="finalChoicesBottons" type="button">Review Words</button>
-</div>
 
-        <!--
-        <div id="bottom_feedback_div" style="visibility:hidden">
-          <div class="questionnaire-content">
-            {% include 'question__article_difficulty.html' %}
-          </div>
-        </div>
+      <div class="finalChoices">
+        <button id="enjoyedButton" class="finalChoicesBottons" type="button">Enjoyed reading?</button>
+        <button id="reviewButton" class="finalChoicesBottons" type="button">Review Words</button>
       </div>
     </main>
-    <div id="toastmessage" class="mdl-js-snackbar mdl-snackbar">
-      <div class="mdl-snackbar__text"></div>
-      <button class="mdl-snackbar__action" type="button"></button>
-      -->
-    </div>
-  </div>
+</body>
 
-    <!-- Menu to change the translation 
-    <div id="alterMenuContainer">
-      <div id="alterMenu"></div>
-    </div>-->
-  </body>
 </html>
