--- a/src/umr/templates/addTopicDialog.html
+++ b/src/umr/templates/addTopicDialog.html
@@ -1,5 +1,8 @@
-<link rel="stylesheet" type="text/css"
-  href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}" />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
+/>
 
 <!-- Template for the topic dialog -->
 <script id="add-topic-dialog-template" type="text/template">
@@ -46,7 +49,7 @@
     <span class="mdl-list__item-primary-content">
       <!-- <img src="{% raw %}{{ image_url }}{% endraw %}" class="feedIcon mdl-list__item-avatar"/> -->
       <a class="mdl-list__item-secondary-action topic">
-      <button 
+      <button
           type="button"
           class="interests"
           >
@@ -62,7 +65,7 @@
     <span class="mdl-list__item-primary-content">
       <!-- <img src="{% raw %}{{ image_url }}{% endraw %}" class="feedIcon mdl-list__item-avatar"/> -->
       <a class="mdl-list__item-secondary-action topic">
-      <button 
+      <button
           type="button"
           class="noninterest"
           >
