--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -200,8 +200,13 @@
   </div>
   <div class="widthOfColumn">
     <div class="tagsOfInterests">
+
+      <div class="interestsSettings">
       <button class='closeTagsOfInterests'>X</button>
       <button class='addInterestButton'>Add + </button>
+      </div>
+    </div>
+
     </div>
     <div class="widthOfColumn">
       <div class="tagsOfNonInterests">
