--- a/src/umr/static/styles/article.css
+++ b/src/umr/static/styles/article.css
@@ -349,6 +349,7 @@ h2,
 h3,
 h4 {
   font-size: 1.4em;
+  font-family: Montserrat;
 }
 
 h5,
@@ -462,6 +463,84 @@ a:hover {
 #reviewButton {
   color: white;
   background-color: #ffbb54;
+}
+
+#enjoyedButton,
+#reviewButton:hover {
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 11em;
+  left: 0;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.8);
+}
+
+.modalContent {
+  border-radius: 1em;
+  font-family: Montserrat;
+  text-align: center;
+  border: 0.2em solid #ffbb54;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0.5em;
+  width: 40em;
+}
+
+.modalTitle {
+  font-size: 1.5em;
+  padding-top: 2em;
+  font-weight: 400;
+}
+
+.modalButton {
+  font-size: 1.1em;
+  margin-left: 1em;
+  margin-right: 1em;
+  font-weight: bold;
+  height: 2.2em;
+  width: 6.5em;
+  border-radius: 0.5em;
+  border-style: none;
+  background: #ffbb54;
+  color: white;
+}
+
+.modalButton:hover {
+  cursor: pointer;
+}
+
+.modalText {
+  font-size: 1em;
+  font-weight: 400;
+  padding-left: 5em;
+  padding-right: 5em;
+  padding-bottom: 2em;
+  line-height: 2em;
+}
+
+.close,
+.close {
+  color: #ffbb54;
+  float: right;
+  font-size: 2em;
+  border: 0.07em solid;
+  padding-left: 0.05em;
+  padding-right: 0.05em;
+  border-radius: 1em;
+}
+
+.close,
+.close:hover {
+  cursor: pointer;
 }
 
 .noselect {
