--- a/src/umr/static/scripts/newStyling/reader-header.css
+++ b/src/umr/static/scripts/newStyling/reader-header.css
@@ -77,7 +77,12 @@ a:hover {
 
 
 /*******MEDIA QUERIES **********/
-@media screen and (max-width: 600px) {  
+@media screen and (max-width: 500px) {  
+  .main-container{
+    position: relative;
+    overflow-x: hidden;
+    margin:0; 
+  }
   .welcome_personal, p{
     display:none; 
   }
