--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -210,8 +210,10 @@
     </div>
     <div class="widthOfColumn">
       <div class="tagsOfNonInterests">
+        <div class="interestsSettings">
         <button class='closeTagsOfNonInterests'>X</button>
         <button class='addNonInterestButton'>Add + </button>
+      </div>
       </div>
     </div>
     <div class="widthOfColumn">
@@ -322,9 +324,8 @@
             <div class="searchText headerElement">
                 {% raw %}{{ displayText }}{% endraw %}
             </div>
-            <div class="deleteSearch headerElement">
-                <i class="material-icons">cancel</i>
-            </div>
+              <button class='deleteSearch headerElement'>X</button>
+            
         </div>
     </li>
     <div class="articleLinkSpacer"></div>
