--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -105,11 +105,10 @@
           <div class="modalContent">
             <span class="close" id=closeEnjoyed>&times;</span>
             <h1 class="modalTitle">Did you enjoy reading this article?</h1>
-            <button class="modalButton">Yes</button>
-            <button class="modalButton">No</button>
+            <button class="modalButton yes">Yes</button>
+            <button class="modalButton no">No</button>
             <h2 class="modalText">Help us make Zeeguu even smarter by always letting us know whether you liked reading
-              an
-              article or not.
+              an article or not.
             </h2>
           </div>
         </div>
@@ -118,7 +117,12 @@
         <div class="modal" id="modalReview">
           <div class="modalContent">
             <span class="close" id=closeReview>&times;</span>
-            <h1>Review Words</h1>
+            <h1 class="modalTitle">Review Words</h1>
+            <h2 class="modalText textEnjoyed">Ensure only to delete the words that you don’t wish to have displayed in
+              your exercises.
+            </h2>
+            <a href="/read"><button class="modalButton reviewBtn backArticles">Back to Articles</button></a>
+            <button class="modalButton reviewBtn">Continue to Exercises</button>
           </div>
         </div>
       </div>
