responsive play button

--- a/src/umr/static/scripts/newStyling/reader-list.css
+++ b/src/umr/static/scripts/newStyling/reader-list.css
@@ -122,8 +122,7 @@ body {
 
 .articleLinkSummary{
   padding-right:0em; 
-  width: 246px;
-  text-align: justify;
+  text-align: left;
 }
 
 .difficulty-level{
