--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -295,6 +295,9 @@ button {
     padding-left: 1.5em;
     padding-right: 0.75em;
   }
+  .sortingCategories{
+    width: 11em;
+  }
 }
 
 @media screen and (max-width: 390px) {
