--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -121,6 +121,7 @@
             <h2 class="modalText textEnjoyed">Ensure only to delete the words that you don’t wish to have displayed in
               your exercises.
             </h2>
+            <div id="wordList"></div>
             <a href="/read"><button class="modalButton reviewBtn backArticles">Back to Articles</button></a>
             <button class="modalButton reviewBtn">Continue to Exercises</button>
           </div>
@@ -130,6 +131,17 @@
 
 
     </main>
+
+    <script id="translatedwords-template" type="text/template">
+      <div id="translationID" translationID="{% raw %}{{ id }}{% endraw %}" class="{% raw %}{{ id }}{% endraw %}">
+        <span class="word"> 
+          <img id="deleteTrash" class="trash"
+          src="{{ url_for('reader_blueprint.static',filename='images/SVGs/trash.svg') }}"
+          alt="delete word" />
+          {% raw %}{{ from }}{% endraw %} - {% raw %}{{ to }}{% endraw %}  </span>
+      </div>
+    </script>
+
 </body>
 
 </html>
