--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -1,7 +1,5 @@
-{% extends 'articleHeader.html' %}
-{% block header %}
 
-
+{% include  "articleHeader.html "%}
 
 <div class="main-container" id="main-containerID">
 
@@ -35,76 +33,9 @@
     </div>
   </header>
 
-  <nav class="nav-menu">
+  {% include  "sideBar.html "%}
 
-    <a href="javascript:void(0);" class="arrow-icon"  id="arrow-p" onclick="sideBarFunction(this)">
-      <p class="arrow-nav-icon"> ▲</p>  
-    </a>
 
-    <div class ="sidenav" id="myTopnav">
-      <img class="zeeguuLogo" src="{{ url_for('reader_blueprint.static',filename='images/zeeguuLogo.svg') }}"
-        alt="Zeeguu Logo - The Elephant" />
-      <div class="dropdown">
-        <button class="dropbtn">| Articles <span id="arrow"></span></button>
-        <div class="dropdown-content">
-          <a href="/read"> All</a>
-          <a href="/read/bookmarks">Bookmarks</a>
-          <a href="/read/classroom">Classroom</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn">| Words <span id="arrow"></span></button>
-        <div class="dropdown-content">
-          <a href="/bookmarks">History</a>
-          <a href="/starred_bookmarks">Starred</a>
-          <a href="/learned_bookmarks">Learned</a>
-          <a href="/top_bookmarks">Top</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn">| Exercises <span id="arrow"></span></button>
-        <div class="dropdown-content">
-          <a href="#">Easy</a>
-          <a href="#">Regular</a>
-          <a href="#">Ambitious</a>
-        </div>
-      </div>
-      <script>
-        function sideBarFunction(element) {
-          var nav = document.getElementById("myTopnav");
-          var navstyle = nav.style.display; 
-          if (navstyle == 'block') {
-            nav.style.display = 'none';
-           element.className ='arrow-none-block'; 
-           document.getElementById('main-containerID').style.cssText = 'margin:0px;';
-          } else {
-            nav.style.display ='block'; 
-            element.className ='arrow-icon'; 
-            document.getElementById('main-containerID').style.cssText = 'margin-left:12.5em;';
-
-          }
-        }
-        </script>
-
-      <div class="generalNavLinks">
-
-        <div class="settingsbtn">
-          <a class="settingsLink">
-            <img class="settingsImg" src="{{ url_for('reader_blueprint.static',filename='images/settingsWheel.svg') }}"
-              alt="Click here for general settings" />
-          </a>
-        </div>
-        <div class="nav-generalbtn">
-          <a class="generalLinks" href="#">Get in touch</a>
-        </div>
-        <div class="nav-generalbtn">
-          <a class="generalLinks" href="#">Sign Out</a>
-        </div>
-
-      </div>
-    </div>
-  </nav>
-  
   <div class="widthOfColumn">
     <div class="mdl-layout__drawer mdl-color--amber-A700">
       <nav class="mdl-navigation">
@@ -259,7 +190,7 @@
       </main>
     </div>
   </div>
-</div>
+
 
 <!-- Template for subscribed source items -->
 <script id="subscription-template-source" type="text/template">
@@ -352,9 +283,10 @@
     </li>
     <div class="articleLinkSpacer"></div>
   </script>
-{% endblock %}
+
 
 <!-- Dialog windows for adding a source, topic and filter. -->
 {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+
 
 </html>
