--- a/src/umr/static/styles/article.css
+++ b/src/umr/static/styles/article.css
@@ -26,6 +26,7 @@
   -webkit-overflow-scrolling: touch; }
 
 .layout__content {
+  position: relative;
   padding-top: 1em;
   padding-bottom: 1em;
   background-color: white;
@@ -44,7 +45,6 @@ zeeguu.loading {
 /* keeps the translation and origin together */
 .origtrans {
   display: inline-block;
-  position: sticky;
   margin: 0;
   line-height: 29px;
 }
@@ -57,7 +57,6 @@ zeeguu:hover {
 }
 
 .origtrans:hover {
-  background-color: white !important;
   border: none;
 }
 
@@ -71,7 +70,6 @@ zeeguu tran {
 
   margin-top: -9px;
   margin-bottom: 0;
-  position: sticky;
 
   padding: 2px;
 
@@ -280,15 +278,13 @@ zeeguu tran[chosen]:after {
 }
 
 #altermenu {
-  display: none;
-  z-index: 1;
   color: white;
   text-align: center;
   background: #ffe086;
-  top: 3.4em;
   border-radius: 0.3em;
-  width: 7em;
+  width: 8em;
   padding: 0.3em;
+  margin-top: 3.3em;
 }
 
 #altermenu .mdl-button {
